language/move-lang/tests/move_check/expansion/use_function_tparam_shadows.exp
error[E03005]: unbound unscoped name
   ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:10:9
   │
10 │         foo()
   │         ^^^ Unbound function 'foo' in current scope

